appId: app.orbis.social
---
- runScript:
    file: ../setupServer.js
    env:
      SERVER_PATH: "?users&follows&posts"
- runFlow:
    file: ../setupApp.yml
- tapOn:
    id: "e2eSignInAlice"
- extendedWaitUntil:
    visible:
      id: "viewHeaderHomeFeedPrefsBtn"

- tapOn:
    label: "Create a curate list"
    id: "e2eGotoLists"
- tapOn:
    id: "newUserListBtn"
- waitForAnimationToEnd
- assertVisible: "Create user list"
- tapOn:
    id: "editListNameInput"
- inputText: "Good Ppl"
- tapOn:
    id: "editListDescriptionInput"
- inputText: "They good"
- tapOn: "Save"
- assertNotVisible: "Create user list"
- tapOn: "People"
- assertVisible: "Good Ppl"
- assertVisible: "They good"

- tapOn:
    id: "moreOptionsBtn"
- tapOn: "Edit list details"
- assertVisible: "Edit user list"
- tapOn:
    id: "editListNameInput"
- eraseText
- inputText: "Bad Ppl"
- tapOn:
    id: "editListDescriptionInput"
- eraseText
- inputText: "They bad"
- tapOn: "Save"
- assertNotVisible: "Edit user list"
- assertVisible: Bad Ppl
- assertVisible: They bad

- tapOn:
    id: "moreOptionsBtn"
- tapOn: "Edit list details"
- assertVisible: "Edit user list"
- tapOn:
    id: "editListDescriptionInput"
- eraseText
- tapOn: "Save"
- assertNotVisible: "Edit user list"
- assertNotVisible:
    id: "listDescription"

- tapOn:
    id: "moreOptionsBtn"
- tapOn: "Delete List"
- tapOn:
    id: "confirmBtn"

- assertVisible:
    id: "newUserListBtn"
- tapOn:
    id: "newUserListBtn"
- assertVisible: "Create user list"
- tapOn:
    id: "editListNameInput"
- inputText: "Good Ppl"
- tapOn:
    id: "editListDescriptionInput"
- inputText: "They good"
- tapOn: "Save"
- assertNotVisible: "Create user list"
- tapOn: "People"
- assertVisible: "Good Ppl"
- assertVisible: "They good"
- tapOn: "People"

- tapOn: "Start adding people"
- tapOn: "Search"
- inputText: "b"
- pressKey: Enter
- tapOn: "Add user to list"
- swipe:
    direction: DOWN
- assertVisible:
    id: "profileCard-bob.test-link"

- tapOn: "Posts"
- assertVisible:
    label: "Shows posts by the users in the list"
    id: "feedItem-by-bob.test"

- tapOn:
    label: "Pins the list"
    id: "pinBtn"
- tapOn:
    id: "e2eGotoHome"
- tapOn: "Good Ppl"
- assertVisible:
    id: "feedItem-by-bob.test"
- tapOn:
    id: "e2eGotoFeeds"
- tapOn:
    id: "saved-feed-Good Ppl"
- assertVisible:
    id: "feedItem-by-bob.test"
- tapOn:
    id: "unpinBtn"
- tapOn:
    id: "bottomBarHomeBtn"
- assertNotVisible:
    id: "homeScreenFeedTabs-Good Ppl"
- tapOn:
    id: "e2eGotoLists"
- tapOn: "Good Ppl"

- tapOn: "People"
- assertVisible:
    id: "profileCard-bob.test-link"
- tapOn:
    point: "90%,43%"
- tapOn:
    id: "user-bob.test-addBtn"
- tapOn:
    id: "doneBtn"

- tapOn:
    id: "bottomBarSearchBtn"
- tapOn:
    id: "searchScreenInput"
- inputText: "bob"
- tapOn:
    id: "searchAutoCompleteResult-bob.test"
- assertVisible:
    id: "profileView"
- tapOn:
    id: "profileHeaderDropdownBtn"
- tapOn: "Add to Lists"
- assertVisible:
    id: "userAddRemoveListsDialog"
- tapOn:
    id: "user-bob.test-addBtn"
- tapOn:
    id: "doneBtn"
- assertNotVisible:
    id: "userAddRemoveListsDialog"
- tapOn:
    id: "profileHeaderDropdownBtn"
- tapOn: "Add to Lists"
- assertVisible:
    id: "userAddRemoveListsDialog"
- tapOn:
    id: "user-bob.test-addBtn"
- tapOn:
    id: "doneBtn"
- assertNotVisible:
    id: "userAddRemoveListsDialog"
