appId: app.orbis.social
---
- runScript:
    file: ../setupServer.js
    env:
      SERVER_PATH: "?users&follows&posts"
- runFlow:
    file: ../setupApp.yml
- tapOn:
    id: "e2eSignInAlice"
- extendedWaitUntil:
    visible:
      id: "viewHeaderHomeFeedPrefsBtn"

- tapOn:
    id: "postDropdownBtn"
    index: 0
- tapOn:
    id: "postDropdownReportBtn"
- tapOn: "Create report for Misleading"
- tapOn: "Create report for Spam"
- tapOn: "Send report to Dev-env Moderation"
- tapOn:
    point: "50%,90%"
