appId: app.orbis.social
---
- runScript:
    file: ../../setupServer.js
    env:
      SERVER_PATH: ?users&follows&posts&feeds
- runFlow:
    file: ../../setupApp.yml
- tapOn:
    id: "e2eSignInAlice"

- tapOn: "Carla's avatar"
- tapOn:
    id: "profileHeaderDropdownBtn"
- tapOn:
    id: "profileHeaderDropdownReportBtn"
- tapOn:
    id: "report:category:Misleading"
- tapOn:
    id: "report:option:Spam"
- assertVisible:
    text: "Send report to Dev-env Moderation"
- tapOn:
    id: "report:submit"
- extendedWaitUntil:
    notVisible:
      id: "report:dialog"
    timeout: 20000
